<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_login"
            android:fontFamily="@font/indigo_daisy"
            android:textSize="50sp"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresa_con_tu_correo_y_contra"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"/>

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:padding="15dp"
            android:background="@drawable/edittext_custom"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="110dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/green"
            android:text="@string/iniciar_sesion" />

        <TextView
            android:id="@+id/tvGoToRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="170dp"
            android:fontFamily="@font/indigo_daisy"
            android:text="@string/register_button"
            android:textColor="?android:attr/textColorLink"
            android:textSize="30sp" />


    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>